src/objects/Apttus_Config2__SettingGroup__c.object
<CustomObject>
    <description>Object to group settings into logical sets.</description>
    <fields>
        <fullName>Apttus_Config2__ApplicationFeatureId__c</fullName>
        <description>Application feature with which this setting group is associated</description>
        <inlineHelpText>Application feature with which this setting group is associated</inlineHelpText>
        <label>Application Feature</label>
        <referenceTo>Apttus_Config2__ApplicationFeature__c</referenceTo>
        <relationshipLabel>Setting Groups</relationshipLabel>
        <relationshipName>Setting_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConfigFlow__c</fullName>
        <description>Associated flow for this group of settings</description>
        <inlineHelpText>Associated flow for this group of settings</inlineHelpText>
        <label>Config Flow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DisplayType__c</fullName>
        <description>display type of the setting group such as List, Actions, Columns or Field Set</description>
        <inlineHelpText>display type of the setting group such as List, Actions, Columns or Field Set</inlineHelpText>
        <label>Display Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                    <default>true</default>
                    <label>List</label>
                </value>
                <value>
                    <fullName>Actions</fullName>
                </value>
                <value>
                    <fullName>Columns</fullName>
                </value>
                <value>
                    <fullName>Field Set</fullName>
                </value>
                <value>
                    <fullName>Flow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExternalApplicationFeatureId__c</fullName>
        <description>External Id pointing to the ApplicationFeature__c original parent record</description>
        <inlineHelpText>External Id pointing to the ApplicationFeature__c original parent record</inlineHelpText>
        <label>ExternalApplicationFeatureId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExternalId__c</fullName>
        <description>External Id pointing to the original SettingGroup__c record</description>
        <inlineHelpText>External Id pointing to the original SettingGroup__c record</inlineHelpText>
        <label>ExternalId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean field to specify whether the group is custom created</description>
        <inlineHelpText>Boolean field to specify whether the group is custom created</inlineHelpText>
        <label>Is Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>Sequence of settings group</description>
        <inlineHelpText>Sequence of settings group</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Setting Group</label>
    <nameField>
        <label>Setting Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Setting Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>